# ustackdocstheme

./: .coveragerc  .stestr.conf  README.rst  requirements.txt  setup.cfg  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
releasenotes/source/: conf.py  index.rst
ustackdocstheme/: __init__.py
ustackdocstheme/tests/: test_ustackdocstheme.py
ustackdocstheme/theme/ustackdocs/: __init__.py  css.html  footer.html  header.html  layout.html  paging.html  search.html  sidebartoc_menu.html  theme.conf  titlerow.html
ustackdocstheme/theme/ustackdocs/static/css/: footer.css  search.css  ustackdocs.css
ustackdocstheme/theme/ustacktheme/: __init__.py  css.html  footer.html  header.html  layout.html  paging.html  theme.conf  titlerow.html
ustackdocstheme/theme/ustacktheme/static/css/: header.css  layout.css  sider.css
