[metadata]
name = ustackdocstheme
summary = Sphinx ducumentation themes for TFCloud.
description-file =
    README.rst
author = William Huang
author-email = ai.william@outlook.com
home-page = https://www.tfcloud.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Documentation

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    ustackdocstheme
# 旧配置
# [entry_points]
# sphinx.html_themes =
#   ustackdocs = ustackdocstheme.theme.ustackdocs

[entry_points]
sphinx.html_themes =
  ustacktheme = ustackdocstheme.theme.ustacktheme

[wheel]
universal = 1
