[metadata]
name = ustackdocstheme
summary = Sphinx ducumentation themes for TFCloud.
description-file =
    README.rst
author = William Huang
author-email = ai.william@outlook.com
home-page = https://www.tfcloud.com/
python_requires = >= 3.5
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Documentation

[files]
packages =
    ustackdocstheme

[entry_points]
sphinx.html_themes =
  ustackdocs = ustackdocstheme.theme.ustackdocs

[wheel]
universal = 1
